[gd_scene load_steps=7 format=3 uid="uid://don07uank3mw6"]

[ext_resource type="Script" path="res://ui/character_select.gd" id="1_pvc4l"]
[ext_resource type="Texture2D" uid="uid://bv7owgpycb0of" path="res://ui/background.png" id="2_scljt"]
[ext_resource type="Texture2D" uid="uid://cwy30fsaf41nu" path="res://mahous/undine/sigil.png" id="2_uk4ng"]
[ext_resource type="Texture2D" uid="uid://ssg85wc8k4c" path="res://mahous/sally/sigil.png" id="3_dkmct"]
[ext_resource type="Texture2D" uid="uid://bb31gn1mem22i" path="res://mahous/sylvia/sigil.png" id="4_le6x6"]
[ext_resource type="Texture2D" uid="uid://d043i36t21lra" path="res://mahous/gwen/sigil.png" id="5_s3mq7"]

[node name="character_select" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pvc4l")

[node name="bg" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_scljt")
expand_mode = 3

[node name="left" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 564.0
offset_bottom = 645.0

[node name="ItemList" type="ItemList" parent="left"]
layout_mode = 2
size_flags_vertical = 3
item_count = 4
icon_scale = 0.25
item_0/text = "Undine"
item_0/icon = ExtResource("2_uk4ng")
item_1/text = "Sally"
item_1/icon = ExtResource("3_dkmct")
item_2/text = "Sylvia"
item_2/icon = ExtResource("4_le6x6")
item_3/text = "Gwen"
item_3/icon = ExtResource("5_s3mq7")

[node name="right" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 580.0
offset_right = 1144.0
offset_bottom = 645.0

[node name="play" type="Button" parent="right"]
layout_mode = 2
text = "play	"

[node name="description" type="RichTextLabel" parent="right"]
layout_mode = 2
size_flags_vertical = 3
text = "Select a character"

[node name="back" type="Button" parent="right"]
layout_mode = 2
text = "Back"

[connection signal="item_selected" from="left/ItemList" to="." method="_on_item_list_item_selected"]
[connection signal="pressed" from="right/play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="right/back" to="." method="_on_back_pressed"]
